# coap-browse

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  package.json
src/: client.rs  component.rs  executor.rs  index.html  index.js  log.rs  main.rs  root.rs  serve.rs  style.css
src/ui/: client.rs  error.rs  log.rs  mod.rs  resources.rs  response.rs
