[package]
authors = ["Wim Looman <wim@nemo157.com>"]
name = "coap-browse"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = "0.1.23"
im = "10.2.0"
serde_cbor = "0.9.0"
serde_derive = "1.0.75"
serde_json = "1.0.26"
serde_xml = "0.9.1"
tokio-core = "0.1.17"
websocket = "0.20.3"

[dependencies.serde]
features = ["rc"]
version = "1.0.75"

[dependencies.tokio-coap]
git = "https://github.com/Nemo157/tokio-coap"
optional = false

[dependencies.vdom-rsjs]
git = "https://github.com/Nemo157/vdom-rsjs"
optional = false

[dependencies.vdom-websocket-rsjs]
git = "https://github.com/Nemo157/vdom-websocket-rsjs"
optional = false

[dependencies.serde_cbor-diag]
git = "https://github.com/Nemo157/serde_cbor-diag-rs"
optional = false
