[package]
authors = ["Wim Looman <wim@nemo157.com>"]
name = "coap-browse"
version = "0.1.0"
edition = "2018"

[dependencies]
serde_cbor = "0.9.0"
serde_derive = "1.0.75"
serde_json = "1.0.26"
serde_xml = "0.9.1"
tokio-compat = "0.1.2"
iced = "0.1.0-beta"
iced_native = "0.1.0"
once_cell = "1.2.0"
font-kit = "0.5.0"

[dependencies.futures]
version = "0.3.1"
features = ["compat"]

[dependencies.serde]
version = "1.0.75"
features = ["rc"]

[dependencies.tokio-coap]
git = "https://github.com/Nemo157/tokio-coap"
optional = false

[dependencies.tokio]
version = "0.2.6"
features = ["net"]

[dependencies.serde_cbor-diag]
git = "https://github.com/Nemo157/serde_cbor-diag-rs"
optional = false
